<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPerson">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_image_view"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="40sp"
                android:src="@mipmap/ic_choose_image_round" />

            <Button
                android:id="@+id/pick_image"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10sp"
                android:layout_gravity="center"
                android:text="@string/pick_image"
                android:layout_marginStart="@dimen/fab_margin"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name"
                android:layout_width="150sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:layout_margin="20sp"
                android:hint="@string/name"
                android:textSize="@dimen/fab_margin"
                tools:ignore="SpUsage"
                android:autofillHints="ali"
                android:inputType="textPersonName" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_layout"
        android:layout_marginTop="20sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/address"
            android:textAlignment="center"
            android:textSize="@dimen/fab_margin"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/address"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:inputType="text"
            android:layout_marginTop="@dimen/fab_margin"
            android:textSize="@dimen/fab_margin"
            tools:ignore="LabelFor,SpUsage"
            android:autofillHints="" />

        <EditText
            android:id="@+id/address1"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:textSize="@dimen/fab_margin"
            tools:ignore="LabelFor,SpUsage"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@color/colorPrimary"
            android:text="@string/phone_no"
            android:textAlignment="center"
            android:textSize="@dimen/fab_margin"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:textSize="@dimen/fab_margin"
            tools:ignore="LabelFor,SpUsage,TextFields"
            android:autofillHints="03084021620"
            android:inputType="number" />

        <EditText
            android:id="@+id/phone1"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:textSize="@dimen/fab_margin"
            tools:ignore="LabelFor,SpUsage,TextFields"
            android:autofillHints="03084021620"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="@dimen/fab_margin"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:textSize="@dimen/fab_margin"
            tools:ignore="LabelFor,SpUsage"
            android:autofillHints="example@gmail.com"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/email1"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:textSize="@dimen/fab_margin"
            tools:ignore="SpUsage"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/save"/>
    </LinearLayout>
</RelativeLayout>